# Backend/src/routes/index.ts
@@ -6,6 +6,7 @@ import productRoutes from './product.routes'
 import petRoutes from './pet.routes';
 import medicalRecordRoutes from './medicalRecord.routes';
 import appointmentRoutes from './appointment.routes';
+import notificationRoutes from './notifications.routes';
 
 const router = Router();
 
@@ -16,5 +17,6 @@ router.use('/products', productRoutes);
 router.use('/pets', petRoutes);
 router.use('/medical-records', medicalRecordRoutes);
 router.use('/appointments', appointmentRoutes);
+router.use('/notifications', notificationRoutes);
 
 export default router;
